--- a/loleaflet/admin/adminSoftwareUpgrade.html
+++ b/loleaflet/admin/adminSoftwareUpgrade.html
@@ -1,105 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% block javascript %}
+<script>
+    if (window.location.protocol == "https:") {
+        host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
+    }
+    else {
+        host = 'ws://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
+    }
 
-    <title>LibreOffice Online - Admin console</title>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <link rel="localizations" href="%SERVICE_ROOT%/loleaflet/%VERSION%/l10n/admin-localizations.json" type="application/vnd.oftn.l10n+json"/>
-  </head>
-  <body>
-    <script src="%SERVICE_ROOT%/loleaflet/%VERSION%/admin-bundle.js"></script>
-    <!--%BRANDING_JS%-->
-    <script>if (typeof brandProductName !== 'undefined') {l10nstrings.strProductName = brandProductName}</script>
-    <script>document.title = l10nstrings.strProductName + ' - ' + l10nstrings.strAdminConsole</script>
-    <script>
-        if (window.location.protocol == "https:") {
-           host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
-        }
-        else {
-           host = 'ws://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
-        }
-
-      Admin.GlobalFunction(host);
-      Admin.SoftwareUpgrade(host);
-    </script>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"><script>document.write(l10nstrings.strProductName + ' - ' + l10nstrings.strAdminConsole)</script><br><small id="version"></small><small id="lokit"></small></a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul id="navbar-menu" class="nav navbar-nav navbar-right"></ul>
-        </div>
-      </div>
-    </nav>
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <li><a href="admin.html"><script>document.write(l10nstrings.strOverview)</script></a></li>
-            <li><a href="adminAnalytics.html"><script>document.write(l10nstrings.strAnalytics)</script></a></li>
-            <li><a href="adminViewLog.html">檢視日誌</a></li>
-            <li><a href="adminConfigSettings.html">系統設定</script></a></li>
-            <li><a href="adminPermissionSettings.html">界面設定</a></li>
-            <li class="active"><a href="adminSoftwareUpgrade.html">軟體升級</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h4 class="page-header">上傳升級檔案</h4>
-          <div class="row"><!-- row begin -->
-            <div class="col-md-8">
-              <div class="input-group">
+    Admin.GlobalFunction(host);
+    Admin.SoftwareUpgrade(host);
+</script>
+{% end block%}
+{% block content %}
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <h4 class="page-header">上傳升級檔案</h4>
+    <div class="row"><!-- row begin -->
+        <div class="col-md-8">
+            <div class="input-group">
                 <label class="input-group-btn">
-                  <span class="btn btn-primary">
-                    瀏覽檔案(.rpm/.zip/.tar.gz)<input type="file" id="filename" style="display: none;" accept=".rpm,.zip, .tar.gz">
-                  </span>
+                    <span class="btn btn-primary">
+                        瀏覽檔案(.rpm/.zip/.tar.gz)<input type="file" id="filename" style="display: none;" accept=".rpm,.zip, .tar.gz">
+                    </span>
                 </label>
                 <input type="text" class="form-control" id="filename-disp" readonly>
-              </div>
             </div>
-            <div class="col-md-4">
-              <input type="button" class="btn btn-success" id="upload" value="上傳" disabled>
-            </div>
-          </div><!-- row end -->
-          <!-- 上傳進度條 -->
-          <div class="row" id="progress" style="margin-top:20px;display:none;"><!-- row begin -->
-            <div class="col-md-8">
-              <p><b>上傳進度：</b></p>
-              <div class="progress">
-                <div class="progress-bar progress-bar-info" id="progressbar" role="progressbar" aria-valuenow="0"
-                  aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-          </div><!-- row end -->
-          <!-- 升級訊息視窗 -->
-          <div class="row" id="work-area" style="display:none;"><!-- row begin -->
-            <div class="col-md-8">
-              <pre id="message-area" style="width:100%; height:60vh; color:#ffffff; background-color:#000000"></pre>
-            </div>
-          </div><!-- row end -->
         </div>
-      </div>
-    </div>
-<!--%FOOTER%-->
-  </body>
-</html>
+        <div class="col-md-4">
+            <input type="button" class="btn btn-success" id="upload" value="上傳" disabled>
+        </div>
+    </div><!-- row end -->
+    <!-- 上傳進度條 -->
+    <div class="row" id="progress" style="margin-top:20px;display:none;"><!-- row begin -->
+        <div class="col-md-8">
+            <p><b>上傳進度：</b></p>
+            <div class="progress">
+                <div class="progress-bar progress-bar-info" id="progressbar" role="progressbar" aria-valuenow="0"
+                                                                                                aria-valuemin="0" aria-valuemax="100">
+                </div>
+            </div>
+        </div>
+    </div><!-- row end -->
+    <!-- 升級訊息視窗 -->
+    <div class="row" id="work-area" style="display:none;"><!-- row begin -->
+        <div class="col-md-8">
+            <pre id="message-area" style="width:100%; height:60vh; color:#ffffff; background-color:#000000"></pre>
+        </div>
+    </div><!-- row end -->
+</div>
+{% end block %}
