--- a/loleaflet/admin/admintemplate.html
+++ b/loleaflet/admin/admintemplate.html
@@ -44,12 +44,8 @@
     <div class="row">
         <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
         <div class="list-group" id="mainMenu">
-            <div class="list-group-item list-group-item-primary">
+            <div class="list-group-item list-group-item-primary text-center">
                 <span class="fs-5 fw-bold" _="Admin console"></span>
-                <div class="float-end text-end">
-                <span class="badge bg-secondary" id="version"></span>
-                <span class="badge bg-secondary" id="lokit"></span>
-                </div>
             </div>
             <a class="list-group-item list-group-item-action" id="admin" href="admin.html"><i class="bi bi-info-circle">&nbsp;&nbsp;</i><span _="Overview"></span></a>
             <a class="list-group-item list-group-item-action" id="adminAnalytics" href="adminAnalytics.html"><i class="bi bi-graph-up">&nbsp;&nbsp;</i><span _="Analytics"></span></a>
@@ -57,6 +53,10 @@
             <a class="list-group-item list-group-item-action" id="adminConfigSettings" href="adminConfigSettings.html"><i class="bi bi-tools">&nbsp;&nbsp;</i><span _="System configuration"></span></a>
             <a class="list-group-item list-group-item-action" id="adminSoftwareUpgrade" href="adminSoftwareUpgrade.html"><i class="bi bi-hammer">&nbsp;&nbsp;</i><span _="Software upgrade"></span></a>
             <a class="list-group-item list-group-item-action" id="adminFontManager" href="adminFontManager.html"><i class="bi bi-file-earmark-font">&nbsp;&nbsp;</i><span _="Font manager"></span></a>
+        </div>
+        <div class="text-center mt-2">
+            <span class="badge bg-secondary" id="version"></span>
+            <span class="badge bg-secondary" id="lokit"></span>
         </div>
         </nav>
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 mt-3" id="mainContent">
